# JRK

./: Diario Andres.sxw  Edificios.sxw  Edificios1.sxw  Edificios2.sxw  Edificios3.sxw  Hito 2.sxw  JRV Los osos amorosos, Hito 1.rar  JRV Los osos amorosos, Hito 2.rar  JRVp2.stw  Practica0.rar  README.md  prac2.sxw
Documentacion/: Documentación.doc  Documentación.rar  Documentación.sxw
Juego/: JRV-TEXTO.dev  JRV-TEXTO.layout  JRV.dev  JRV.layout  Makefile.win  codigo.rar
Juego/codigo/: eExcepcion.cpp  eExcepcion.h  eExcepcionFichero.cpp  eExcepcionFichero.h  eExcepcionInterna.cpp  eExcepcionInterna.h  eExcepcionLocalizada.cpp  eExcepcionLocalizada.h  eExcepcionParametro.cpp  eExcepcionParametro.h  gApi.cpp  gApi.h  gBarraProgreso.cpp  gBarraProgreso.h  gBarraVida.cpp  gBarraVida.h  gBaseModelo.cpp  gBaseModelo.h  gBoton.cpp  gBoton.h  gChatBox.cpp  gChatBox.h  gEntidad2D.cpp  gEntidad2D.h  gEntidad3D.cpp  gEntidad3D.h  gFuente.cpp  gFuente.h  gImagen.cpp  gImagen.h  gListBox.cpp  gListBox.h  gModelo.cpp  gModelo.h  gObjeto3D.cpp  gObjeto3D.h  gRectangulo.cpp  gRectangulo.h  gSegmento.cpp  gSegmento.h  (+192 more)
Juego/doc/: Diagramas.vsd  Documentación.rar
Modelos juego/Barracones/: COPYRIGHT.txt  Makefile.in  modelo.3DS  (+4 more)
Modelos juego/textures/: Makefile.am
Modelos juego/units/: Makefile.am  Makefile.in  README  values_overview.ksp
Modelos juego/units/fix_airturret/: index.unit
Modelos juego/units/fix_barracks/: index.unit
Modelos juego/units/fix_commandbunker/: index.unit  unit.3ds
Modelos juego/units/fix_comsat/: index.unit  unit.3ds
Modelos juego/units/fix_helipad/: index.unit  unit.3ds
Modelos juego/units/fix_mineralrefinery/: index.unit  unit.3ds
Modelos juego/units/fix_oilrefinery/: index.unit  unit.3ds
Modelos juego/units/fix_powerplant/: index.unit  unit.3ds
Modelos juego/units/fix_prison/: index.unit
Modelos juego/units/fix_repairpad/: index.unit  unit.3ds
Modelos juego/units/fix_samsite/: index.unit  unit.3ds
Modelos juego/units/fix_techcenter/: index.unit  unit.3ds
Modelos juego/units/fix_turret/: index.unit  unit.3ds
Modelos juego/units/fix_weaponsfactory/: index.unit  unit.3ds
Modelos juego/units/mob_ferry/: index.unit  unit.3ds
Modelos juego/units/mob_grizzly/: index.unit  unit.3ds
Modelos juego/units/mob_koyote/: index.unit  unit.3ds
Modelos juego/units/mob_leopard/: index.unit  unit.3ds
Modelos juego/units/mob_mineralharvester/: index.unit  unit.3ds
Modelos juego/units/mob_oilharvester/: index.unit  unit.3ds
Modelos juego/units/mob_panther/: index.unit  unit.3ds
Modelos juego/units/mob_piranha/: index.unit  unit.3ds
Modelos juego/units/mob_puma/: index.unit  unit.3ds
Modelos juego/units/mob_ship/: index.unit  unit.3ds
Modelos juego/units/mob_tiger/: index.unit  unit.3ds
Modelos juego/units/mob_tornado/: index.unit  unit.3ds
Modelos juego/units/mob_transall/: index.unit  unit.3ds
Modelos juego/units/mob_warthog/: index.unit  unit.3ds
Modelos juego/units/mob_wolf/: index.unit  unit.3ds
Unidades/: Bando1.sxw  Bando2.sxw
texturas/: index.ground
(+73 files in other folders)
