# add your texture to texture_DATA (space separated) to make it install!
texture_DATA = \
	black.jpg \
	doors7.jpg \
	metal19.jpg \
	panels1.jpg \
	rotor1.jpg \
	wall4.jpg \
	warn1.jpg \
	broken1.jpg \
	broken2.jpg \
	camo1.jpg \
	camo2.jpg \
	camo3.jpg \
	camo4.jpg \
	camo5.jpg \
	camo6.jpg \
	camo7.jpg \
	camo8.jpg \
	camo9.jpg \
	camo10.jpg \
	camo11.jpg \
	concrt1.jpg \
	concrt2.jpg \
	concrt3.jpg \
	crates1.jpg \
	doors1.jpg \
	doors2.jpg \
	doors3.jpg \
	doors4.jpg \
	doors5.jpg \
	doors6.jpg \
	grid1.jpg \
	grid2.jpg \
	metal1.jpg \
	metal2.jpg \
	metal3.jpg \
	metal4.jpg \
	metal5.jpg \
	metal6.jpg \
	metal7.jpg \
	metal8.jpg \
	metal9.jpg \
	metal10.jpg \
	metal11.jpg \
	metal12.jpg \
	metal13.jpg \
	metal14.jpg \
	metal15.jpg \
	metal16.jpg \
	metal17.jpg \
	metal18.jpg \
	metal20.jpg \
	metal21.jpg \
	metal22.jpg \
	metal23.jpg \
	metal24.jpg \
	metal25.jpg \
	metal26.jpg \
	metal27.jpg \
	metal28.jpg \
	metal29.jpg \
	metal30.jpg \
	minerals.jpg \
	missile1.jpg \
	mine1.jpg \
	mslback1.jpg \
	mslfrnt1.jpg \
	pipe2.jpg \
	ring1.jpg \
	roof1.jpg \
	roof2.jpg \
	shockwav.jpg \
	stairs1.jpg \
	steel3.jpg \
	steel4.jpg \
	swtchbrd.jpg \
	tnkhull1.jpg \
	tracks.jpg \
	trtside.jpg \
	wall1.jpg \
	wall2.jpg \
	wall3.jpg \
	wheel.jpg \
	wheel1.jpg \
	window1.jpg \
	window2.jpg \
	rock1.jpg \
	rock2.jpg \
	wood1.jpg \
	wood2.jpg \
	wood3.jpg \
	wood4.jpg \
	wood5.jpg \
	treetop1.jpg \
	hay1.jpg \
	hay2.jpg \
	tnkside1.jpg \
	water1.jpg \
	tree-piece-2.png \
	minmine.jpg

# no further editing need here

texturedir = $(kde_datadir)/boson/themes/textures

EXTRA_DIST = $(texture_DATA)
